<resources>
    <string name="app_name">PostsApp</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="email_or_username">Email or Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="don_t_have_an_account">Ypu don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="email_or_username_required">Email or username is required</string>
    <string name="password_required">Password is required</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_retry">Retry</string>
    <string name="feed">Feed</string>
    <string name="error_icon_description">Error Icon</string>
    <string name="logout_confirmation_title">Logout</string>
    <string name="logout_confirmation_message">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="btn_back">Back</string>
    <string name="error_server">Server error (%1$d)</string>
    <string name="error_network">Network error, please check your connection</string>
    <string name="error_unknown">An unknown error occurred</string>
</resources>